[workspace.package]
edition = "2021"
rust-version = "1.83"

[workspace]
members = [
    "crates/pine-core",
    "crates/pine-data",
    "crates/pine-lexer",
    "crates/pine-ast",
    "crates/pine-diagnostics",
    "crates/pine-parser",
    "crates/pine-interpreter",
    "crates/pine-builtin-macro",
    "crates/pine-builtins",
    "crates/pine-lint",
    "crates/pine-sema",
    "crates/pine",
    "crates/pine-reference",
    "tests",
    "benches",
]
resolver = "2"

[workspace.dependencies]
pine-core = { path = "crates/pine-core" }
pine-data = { path = "crates/pine-data" }
pine-lexer = { path = "crates/pine-lexer" }
pine-parser = { path = "crates/pine-parser" }
pine-ast = { path = "crates/pine-ast" }
pine-diagnostics = { path = "crates/pine-diagnostics" }
pine-interpreter = { path = "crates/pine-interpreter" }
pine-builtin-macro = { path = "crates/pine-builtin-macro" }
pine-builtins = { path = "crates/pine-builtins" }
pine-lint = { path = "crates/pine-lint" }
pine-sema = { path = "crates/pine-sema" }
pine = { path = "crates/pine" }
pine-reference = { path = "crates/pine-reference" }
eyre = "0.6"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
csv = "1.3"
ureq = { version = "2.10", features = ["json"] }
