[package]
name = "pinecone-benches"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/test_data.rs"

[[bench]]
name = "lexer"
harness = false
path = "src/lexer.rs"

[[bench]]
name = "parser"
harness = false
path = "src/parser.rs"

[[bench]]
name = "interpreter"
harness = false
path = "src/interpreter.rs"

[[bench]]
name = "technical_analysis"
harness = false
path = "src/technical_analysis.rs"

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pine.workspace = true
pine-lexer.workspace = true
pine-parser.workspace = true
pine-interpreter.workspace = true
pine-builtins.workspace = true
pine-ast.workspace = true
