[package]
name = "pine-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies]
pine.workspace = true
pine-interpreter.workspace = true
pine-lexer.workspace = true
pine-parser.workspace = true
pine-ast.workspace = true
eyre.workspace = true
walkdir = "2"
