[package]
name = "pine-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "integration"
path = "integration.rs"

[[test]]
name = "corpus"
path = "corpus.rs"

[dependencies]
pine.workspace = true
pine-interpreter.workspace = true
pine-lexer.workspace = true
pine-parser.workspace = true
pine-ast.workspace = true
pine-core.workspace = true
pine-data.workspace = true
eyre.workspace = true
walkdir = "2"
