[package]
name = "pine-parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pine-parser"
path = "bin/pine-parser.rs"

[dependencies]
pine-lexer.workspace = true
pine-ast.workspace = true
eyre.workspace = true
clap.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
walkdir = "2"
