[package]
name = "pine-parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pine-parser"
path = "bin/pine-parser.rs"

[dependencies]
pine-lexer.workspace = true
pine-ast.workspace = true
eyre.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
walkdir = "2"
