[package]
name = "pine-reference"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre.workspace = true
headless_chrome = "1.0"
htmd = "0.5"
scraper = "0.17"
clap.workspace = true
comrak = "0.28"

[[bin]]
name = "pine-reference"
path = "bin/main.rs"
