[package]
name = "pine-reference"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
pine-core.workspace = true
eyre.workspace = true
clap.workspace = true

tokio = { version = "1", features = ["full"] }
headless_chrome = "1.0"
htmd = "0.5"
scraper = "0.17"
comrak = "0.28"

[[bin]]
name = "pine-reference"
path = "bin/main.rs"
