[package]
name = "custom-builtin-func"
version = "0.1.0"
edition = "2021"

# Empty workspace to prevent this from being included in the parent workspace
[workspace]

[dependencies]
# Import the local pine crates
pine = { path = "../../crates/pine" }
pine-interpreter = { path = "../../crates/pine-interpreter" }
pine-builtins = { path = "../../crates/pine-builtins" }
pine-ast = { path = "../../crates/pine-ast" }
pine-lexer = { path = "../../crates/pine-lexer" }
pine-parser = { path = "../../crates/pine-parser" }
