[package]
name = "use-kraken-data-source"
version = "0.1.0"
edition = "2021"

# Empty workspace to prevent this from being included in the parent workspace
[workspace]

[dependencies]
# Import the local pine crates
pine = { path = "../../crates/pine" }
pine-data = { path = "../../crates/pine-data" }
pine-interpreter = { path = "../../crates/pine-interpreter" }
